# Should only contain new features not ports from features we already had in the KDE 3 version

Changes in 3.0dev :
- Fix typo in tooltip of network sleep interval (154481)
- Fix KT closing when window is hidden and a torrent is opened via commandline (154488)
- Added open silently action to file menu (154484)
- Fix crash in ChunkDownloadView by using a model instead of an item based
approach

Changes in 3.0beta1 :
- Added option to select the network interface to use
- Added option to disable data checking during uploading
- Added possibility to open multiple torrents in one go (they will be opened
silently)
- Added option to do a data check when a torrent is finished
- Added new missing files dialog with quit button
- Added support for hostnames in PeerManager::addPotentialPeer
- Added IPv6 support
- Remember current searches in searchplugin and restore them on restart
- Make tracker url and status selectable in tracker tab
- Switch to QCA2 for SHA1 hash generation (old code is still there in case QCA::isSupported("sha1") fails)
- Shutdown update timer when not necessary
- Stop using symlinks and use a file which contains the location of each file of a torrent
- Use a toolbar in the search plugin instead of a widget
- Added global shortcut to show or hide ktorrent
- Show files which a chunk belongs to in chunks tab
- Add alternative fileview mode (flat list)
- After tree succesive mmap failures, switch to buffered mode permanently
- Added SOCKSv4 and v5 support
- Added feature to move inidividual files of a torrent
- When files are missing allow user to select another location