@@ -22,6 +22,7 @@
 	<Action name="check_data"/>
 	<Separator/>
 	<Action name="queue_action"/>
+	<Action name="queue_pause" />
 	<Separator/>
 	<Action name="speed_limits"/>
   </Menu>
@@ -44,5 +45,6 @@
 	<Action name="stop_all"/>
 	<Separator/>
 	<Action name="queue_action"/>
+	<Action name="queue_pause" />
 </ToolBar>
 </kpartgui>
